--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "tradeflora",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.2.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -9,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.12.0",
+    "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
